--- a/advanced-html-css/myandex-murrrket/index.html
+++ b/advanced-html-css/myandex-murrrket/index.html
@@ -25,7 +25,7 @@
   <main class="content">
     <article class="article">
       <h2 class="article__title">Даддитс</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/24/daddits-1.jpg" alt="Red cat Daddits" class="article__img">
+      <img src="./images/daddits.jpg" alt="Red cat Daddits" class="article__img">
       <p class="description">Ласковый обнимака пушистый рыжий Даддитс. Мраморный красавец Даддитс - совершенно
         обнимательный и тискательный кот.
         Тёплая шубка, тёплый взгляд, самое тёплое отношение к людям. Очень любит ласку, радуется, когда гладят, берут на
@@ -36,8 +36,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Заюшка</h2>
-      <img src="	https://kusochekschastya.ru/images/2021/09/23/zaushka-1.jpg" alt="The kitty Zaiushka"
-        class="article__img">
+      <img src="./images/zaushka.jpg" alt="The kitty Zaiushka" class="article__img">
       <p class="description">Фото очень говорящие и раскрывают всю её суть - спокойная, добрая, несчастная кошка трудной
         судьбы. Молодая. Глаз
         кривоватый от "хорошей" уличной жизни, на мордочке пятно - словно испачкано, но это такая расцветка. Будто сама
@@ -49,7 +48,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Манон</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/23/manon-1.jpg" alt="The cat Manon" class="article__img">
+      <img src="./images/manon.jpg" alt="The cat Manon" class="article__img">
       <p class="description">Красивая, умная, изящная кошка редкого голубокремового окраса. Обладает самыми прекрасными
         в мире изумрудными глазами,
         глубокими, как озера. Ласковая в меру, с чувством собственного достоинства. Манон пережила сложный перелом лапы,
@@ -62,7 +61,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Барсучок</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/23/barsuchok-1.jpg" alt="The cat Manon" class="article__img">
+      <img src="./images/barsuchok.jpg" alt="The cat Manon" class="article__img">
       <p class="description">Котик, которого вместе с кошкой Катей забрали из квартиры бабушки, надолго и серьёзно
         пропавшей в больницу. Если Катя
         вполне ок в силу молодости, то у Барсучка во рту было такое, как будто в рот заливали кипяток. Гнили зубки,
@@ -86,8 +85,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Загрейка</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/23/zagreika-1.jpg" alt="The kitty Zagreika"
-        class="article__img">
+      <img src="./images/zagreika.jpg" alt="The kitty Zagreika" class="article__img">
       <p class="description">Загрейка очень ласковая молодая кошка, особенная (почти слепая). Её нашёл случайный
         прохожий в ужасном состоянии и
         принёс в клинику, где врачи установили, что кошка упала с высоты. Загрейке досталось много испытаний, боли,
@@ -106,8 +104,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Агнешка</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/23/agneshka-3.jpg" alt="The kitty Agneshka"
-        class="article__img">
+      <img src="./images/agneshka.jpg" alt="The kitty Agneshka" class="article__img">
       <p class="description">Агнешку отправила к нам волонтёр Светлана из Нальчика для лечения и пристройства. Её
         прооперировали в Гудвет. Удалили
         зубы с одной стороны - все, кроме клыков и резцов, которые между клыками, зачистили вторую сторону и жизнь
@@ -134,8 +131,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Кум Черника</h2>
-      <img src="https://kusochekschastya.ru/images/2021/02/14/kum-1.jpg" alt="The black cat Kum Chernika"
-        class="article__img">
+      <img src="./images/kum.jpg" alt="The black cat Kum Chernika" class="article__img">
       <p class="description">Был спасен с улицы, где его заедали насмерть блохи. Сейчас он оброс, от хорошего питания
         шерсть стала шелковой и
         блестящей как у норки :)) Кум Черника среднего возраста, ему около 4 лет, кастрирован, очень ласковый и
@@ -145,8 +141,7 @@
     <article class="article">
       <h2 class="article__title">Зайчонок</h2>
       <h3 class="article__subtitle">Дом инвалидов</h3>
-      <img src="https://kusochekschastya.ru/images/2021/02/14/zaichenok-big.jpg" alt="The cat Zaichenok"
-        class="article__img">
+      <img src="./images/zaichenok.jpg" alt="The cat Zaichenok" class="article__img">
       <p class="description">Зайчонок родом из Нальчика. Двухмесячным малышом он, голодный и встрепанный, прикултыхал к
         пекарне в поисках еды, где
         его на следующий же день случайно прищемили дверью. Травма крестца, одна задняя лапа и хвост на 90 процентов
@@ -169,8 +164,7 @@
     <article class="article">
       <h2 class="article__title">Зефирка</h2>
       <h3 class="article__subtitle">Дом инвалидов</h3>
-      <img src="https://kusochekschastya.ru/images/2020/06/27/3zefirka.jpg" alt="The kitty Zefirka"
-        class="article__img">
+      <img src="./images/zefirka.jpg" alt="The kitty Zefirka" class="article__img">
       <p class="description">Зефирка тоже из Нальчика. Еще котенком ее сбила машина и она пролежала в придорожной грязи,
         под дождем, 3 дня,
         обездвиженная, напуганная, голодная. Ее подобрала добрая женщина, принесла домой, положила в коробку, обтерла
@@ -188,8 +182,7 @@
     <article class="article">
       <h2 class="article__title">Снежинка</h2>
       <h3 class="article__subtitle">Дом инвалидов</h3>
-      <img src="https://kusochekschastya.ru/images/2020/06/27/sneginka-dom2.jpg" alt="The kitty Sneginka"
-        class="article__img">
+      <img src="./images/sneginka.jpg" alt="The kitty Sneginka" class="article__img">
       <p class="description">Снежинка - кошка неземной красоты. Белоснежная разноглазая вислоушка, родом из Грозного, в
         своей прежней жизни, до
         перелома позвоночника, она была условно безнадзорной. То есть жила на улице, но иногда люди ее кормили. У нее не
@@ -207,8 +200,7 @@
     <article class="article">
       <h2 class="article__title">Солнышко</h2>
       <h3 class="article__subtitle">Дом инвалидов</h3>
-      <img src="https://kusochekschastya.ru/images/2021/02/14/solnishko-big.jpg" alt="The cat Solnyshko"
-        class="article__img">
+      <img src="./images/solnishko.jpg" alt="The cat Solnyshko" class="article__img">
       <p class="description">Солнышко - потому что рыжий. Цвета тепла и счастья. Он не очень молодой кот, никто точно не
         знает, сколько ему лет, но
         однозначно больше 5. Возможно, 7 или 8. Всю свою жизнь до перелома позвоночника он прожил в Урус-Мартане в
@@ -225,8 +217,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Мышка</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/28/mishka-big.jpg" alt="The kitty Myshka"
-        class="article__img">
+      <img src="./images/mishka.jpg" alt="The kitty Myshka" class="article__img">
       <p class="description">Мышка - очень несчастное, пугливое создание из неблагополучной бабушкиной квартиры. Она
         была подростком, когда ее оттуда
         вывезли, и только сейчас, спустя год жизни на передержке при хорошем питании и ласке пришла в себя. У Мышки
@@ -236,7 +227,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Йоу</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/28/yooo-big.jpg" alt="The kitty Yow" class="article__img">
+      <img src="./images/yooo.jpg" alt="The kitty Yow" class="article__img">
       <p class="description">Йоу настолько скромная и незаметная на передержке, что даже не совсем понятно, что о ней
         рассказать. Кроме того, что она
         очень любит человеческую ласку, тиха и неконфликтна в прайде, чистоплотная и любит консервы Animonda. Первое
@@ -253,7 +244,7 @@
     </article>
     <article class="article">
       <h2 class="article__title">Носик</h2>
-      <img src="https://kusochekschastya.ru/images/2021/09/28/nosik-big.jpg" alt="The kitty Nosik" class="article__img">
+      <img src="./images/nosik.jpg" alt="The kitty Nosik" class="article__img">
       <p class="description">Кошечка Носик - миниатюрная, юная (ей нет еще года), очень ласковая. Родилась у беременной
         кошки, вывезенной из
         неблагополучной квартиры. Очень трогательное, нежное существо, нуждающееся во внимании и любви и недополучающее
