feat: finish main page

--- a/advanced-html-css/myandex-murrrket/index.html
+++ b/advanced-html-css/myandex-murrrket/index.html
@@ -25,6 +25,14 @@
       и выслать ее на <a href="mailto:info@kusochekschastya.ru" class="header__link" target="_blank">электронную почту
         фонда</a></p>
   </header>
+  <div class="switcher">
+    <span class="switcher__list">
+      <a href="index-list.html" class="switcher__list-link"></a>
+    </span>
+    <span class="switcher__tiles">
+      <a href="#!" class="switcher__tiles-link"></a>
+    </span>
+  </div>
   <main class="content">
     <article class="article">
       <img src="./images/daddits.jpg" alt="Red cat Daddits" class="article__img">
@@ -488,7 +496,16 @@
     <span class="helper">i i i i i i i i i i i i i</span>
   </main>
   <footer class="footer">
-
+    <div class="copyright">
+      <ul class="copyright__list">
+        <li class="copyright__item">© 2021</li>
+        <li class="copyright__item"><a href="https://www.coursera.org/" class="copyright__link"
+            target="_blank">Coursera</a>
+        </li>
+        <li class="copyright__item"><a href="https://github.com/AlexKuryanov" class="copyright__link">GitHub</a>
+        </li>
+      </ul>
+    </div>
   </footer>
 
 </body>
