feat: stylize header & footer

--- a/advanced-html-css/week-3/grandmas-kittens/index.html
+++ b/advanced-html-css/week-3/grandmas-kittens/index.html
@@ -5,15 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Бабуленькины котятки></title>
+  <title>Бабуленькины котятки</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header class="header"></header>
-  <main class="content"></main>
-  <footer class="footer"></footer>
-
+  <header class="header">
+    <h1 class="header__title">Бабуленькины котятки</h1>
+  </header>
+  <main class="content">
+    <section class="menu"></section>
+    <section class="cards"></section>
+    <section class="rating"></section>
+  </main>
+  <footer class="footer">
+    <div class="footer__copyright">© ООО Бабуленькины котятки, 2015</div>
+    <div class="footer__contacts">Наш адрес: улица Котовая, д.5</div>
+  </footer>
 </body>
 
 </html>
