feat: create menu, add main styles to it

--- a/advanced-html-css/week-3/grandmas-kittens/index.html
+++ b/advanced-html-css/week-3/grandmas-kittens/index.html
@@ -14,7 +14,14 @@
     <h1 class="header__title">Бабуленькины котятки</h1>
   </header>
   <main class="content">
-    <section class="menu"></section>
+    <section class="menu">
+      <ul class="menu__list">
+        <li class="menu__item">Абиссинская</li>
+        <li class="menu__item">Британская</li>
+        <li class="menu__item">Русская голубая</li>
+        <li class="menu__item">Сиамская</li>
+      </ul>
+    </section>
     <section class="cards"></section>
     <section class="rating"></section>
   </main>
