feat: add rating section & add main styles to it

--- a/advanced-html-css/week-3/grandmas-kittens/index.html
+++ b/advanced-html-css/week-3/grandmas-kittens/index.html
@@ -23,7 +23,17 @@
       </ul>
     </section>
     <section class="cards"></section>
-    <section class="rating"></section>
+    <section class="rating">
+      <h2 class="section__title">Рейтинг</h2>
+      <label for="sort" class="sort">по убыванию
+        <input type="checkbox" name="sort" id="sort" class="sort__input"></label>
+      <div class="wrapper">
+        <p class="rating__item">9</p>
+        <p class="rating__item">8</p>
+        <p class="rating__item">10</p>
+        <p class="rating__item">4</p>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer__copyright">© ООО Бабуленькины котятки, 2015</div>
