feat: add images to layout

--- a/advanced-html-css/week-3/grandmas-kittens/index.html
+++ b/advanced-html-css/week-3/grandmas-kittens/index.html
@@ -22,7 +22,34 @@
         <li class="menu__item">Сиамская</li>
       </ul>
     </section>
-    <section class="cards"></section>
+    <section class="cards">
+      <ul class="cards__list">
+        <li class="cards__item first">
+          <img height="250" src="./images/russkaya-golubaya-2.jpg" alt="Русская голубая">
+        </li>
+        <li class="cards__item second">
+          <img height="250" src="./images/abissinskaya-2.jpg" alt="Абиссинская">
+        </li>
+        <li class="cards__item third">
+          <img height="250" src="./images/siamskaya-koshka-2.jpg" alt="Сиамская">
+        </li>
+        <li class="cards__item fourth">
+          <img height="250" src="./images/russkaya-golubaya-1.jpg" alt="Русская голубая">
+        </li>
+        <li class="cards__item fifth">
+          <img height="250" src="./images/british-2.jpg" alt="Британская">
+        </li>
+        <li class="cards__item sixth">
+          <img height="250" src="./images/abissinskaya-1.jpg" alt="Абиссинская">
+        </li>
+        <li class="cards__item seventh">
+          <img height="250" src="./images/siamskaya-koshka-1.jpg" alt="Сиамская">
+        </li>
+        <li class="cards__item eighth">
+          <img height="250" src="./images/british-1.jpg" alt="Британская">
+        </li>
+      </ul>
+    </section>
     <section class="rating">
       <h2 class="rating__title">Рейтинг</h2>
       <label for="sort" class="rating__label">по убыванию</label>
