feat: add cards-description

--- a/advanced-html-css/week-3/grandmas-kittens/index.html
+++ b/advanced-html-css/week-3/grandmas-kittens/index.html
@@ -24,29 +24,37 @@
     </section>
     <section class="cards">
       <ul class="cards__list">
-        <li class="cards__item first">
-          <img height="250" src="./images/russkaya-golubaya-2.jpg" alt="Русская голубая">
+        <li class="cards__item first russian-blue">
+          <span class="cards__desc">Вася, 5 лет</span>
+          <img src="./images/russkaya-golubaya-2.jpg" alt="Русская голубая">
         </li>
-        <li class="cards__item second">
-          <img height="250" src="./images/abissinskaya-2.jpg" alt="Абиссинская">
+        <li class="cards__item second abissyn">
+          <span class="cards__desc">Киса, 3 года</span>
+          <img src="./images/abissinskaya-2.jpg" alt="Абиссинская">
         </li>
-        <li class="cards__item third">
-          <img height="250" src="./images/siamskaya-koshka-2.jpg" alt="Сиамская">
+        <li class="cards__item third siam">
+          <span class="cards__desc">Муся, 1 год</span>
+          <img src="./images/siamskaya-koshka-2.jpg" alt="Сиамская">
         </li>
-        <li class="cards__item fourth">
-          <img height="250" src="./images/russkaya-golubaya-1.jpg" alt="Русская голубая">
+        <li class="cards__item fourth russian-blue">
+          <span class="cards__desc">Ксива, 6 месяцев</span>
+          <img src="./images/russkaya-golubaya-1.jpg" alt="Русская голубая">
         </li>
-        <li class="cards__item fifth">
-          <img height="250" src="./images/british-2.jpg" alt="Британская">
+        <li class="cards__item fifth britain">
+          <span class="cards__desc">Рич, 4 года</span>
+          <img src="./images/british-2.jpg" alt="Британская">
         </li>
-        <li class="cards__item sixth">
-          <img height="250" src="./images/british-1.jpg" alt="Британская">
+        <li class="cards__item sixth britain">
+          <span class="cards__desc">Белка, 2 года</span>
+          <img src="./images/british-1.jpg" alt="Британская">
         </li>
-        <li class="cards__item seventh">
-          <img height="250" src="./images/siamskaya-koshka-1.jpg" alt="Сиамская">
+        <li class="cards__item seventh siam">
+          <span class="cards__desc">Тима, 5 лет</span>
+          <img src="./images/siamskaya-koshka-1.jpg" alt="Сиамская">
         </li>
-        <li class="cards__item eighth">
-          <img height="250" src="./images/abissinskaya-1.jpg" alt="Абиссинская">
+        <li class="cards__item eighth abissyn">
+          <span class="cards__desc">Руби, 1.5 года</span>
+          <img src="./images/abissinskaya-1.jpg" alt="Абиссинская">
         </li>
       </ul>
     </section>
