feat: finish task

--- a/advanced-html-css/week-5/yandex-auto/index.html
+++ b/advanced-html-css/week-5/yandex-auto/index.html
@@ -9,8 +9,66 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body">
+  <main class="content">
+    <div class="logo">
+      <img src="./images/logo.png" alt="Logo" class="logo__pic" width="168" height="131">
+    </div>
+    <h1 class="main-title">Яндекс.Авто</h1>
 
+    <section class="promo">
+      <button class="promo__prev promo__btn">
+        <img src="./images/prev-arrow-min.svg" alt="Previous button" class="promo__btn-icon">
+      </button>
+      <button class="promo__next promo__btn">
+        <img src="./images/next-arrow-min.svg" alt="Next button" class="promo__btn-icon">
+      </button>
+      <h2 class="promo__title">«Хозяйственный мужчина ищет надежную красавицу для прогулок по бездорожью. Полный привод
+        обязателен»</h2>
+      <img src="./images/offroad-cars.png" alt="Two offroads cars" class="promo__img">
+    </section>
+
+    <section class="video">
+      <h2 class="video__title">Яндекс.Авто за минуту</h2>
+      <img src="./images/video.png" alt="Poster for video" class="video__poster">
+      <button class="video__btn">
+        <img src="./images/play-btn-min.svg" alt="Play button" class="video__play-icon">
+      </button>
+    </section>
+
+    <section class="features">
+      <h2 class="features__title">Простой способ выбрать автомобиль</h2>
+      <ul class="features__list">
+        <li class="features__item">
+          <h3 class="features__name" title="Каталог">Каталог</h3>
+          <p class="features__desc">Самый большой каталог
+            с описанием автомобилей
+            от современных — до 20 лет назад</p>
+        </li>
+        <li class="features__item">
+          <h3 class="features__name" title="Поиск">Поиск</h3>
+          <p class="features__desc">Возможность искать
+            по большему числу параметров, чем где бы
+            то ни было</p>
+        </li>
+        <li class="features__item">
+          <h3 class="features__name" title="Выборки автомобилей">Выборки автомобилей</h3>
+          <p class="features__desc">Выборки автомобилей
+            в зависимости от ваших потребностей: «семейный», «для города», «для путешествий»</p>
+        </li>
+        <li class="features__item">
+          <h3 class="features__name" title="Простой язык">Простой язык</h3>
+          <p class="features__desc">Возможность описания характеристик простым языком, понятным неискушенному
+            пользователю</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="footer">
+      <h2 class="footer__title">Выбирайте. Находите. Заводите!</h2>
+      <button class="footer__button">Попробовать!</button>
+    </section>
+  </main>
 </body>
 
 </html>
